objects/Alexa_News_Snapshot__c.object
<CustomObject><fields>
        <fullName>Closed_Opps__c</fullName>
        <label>Closed Opps</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Escalated_Cases__c</fullName>
        <label>Escalated Cases</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>News_Headline__c</fullName>
        <label>News Headline</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>News_Type__c</fullName>
        <label>News Type</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Red_Projects__c</fullName>
        <label>Red Projects</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Total_Billed__c</fullName>
        <label>Total Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Total_Cases__c</fullName>
        <label>Total Cases</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Total_Opps__c</fullName>
        <label>Total Opps</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Total_Projects__c</fullName>
        <label>Total Projects</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Stores snapshot summaries of Opps, Cases, Projects and Invoices used by Alexa new service</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Alexa News</label><nameField>
        <displayFormat>NEWS-{000000}</displayFormat>
        <label>Alexa News</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Alexa News</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>News_Type__c</columns>
        <columns>News_Headline__c</columns>
        <columns>Total_Opps__c</columns>
        <columns>Closed_Opps__c</columns>
        <columns>Total_Cases__c</columns>
        <columns>Escalated_Cases__c</columns>
        <columns>Total_Projects__c</columns>
        <columns>Red_Projects__c</columns>
        <columns>Total_Billed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>